Fix realartists/shiphub-cocoa#565 Character wrap branch names if necessary

--- a/IssueWeb/app/components/issue/pr-summary.css
+++ b/IssueWeb/app/components/issue/pr-summary.css
@@ -7,6 +7,7 @@ div.PRSummary {
 span.PRSummaryRef {
   font-family: menlo, consolas, monaco, sans-serif;
   font-size: 12px;
+  word-break: break-all;
 }
 
 div.PRSummaryCommitStatus {
